--- a/botsing-reproduction/pom.xml
+++ b/botsing-reproduction/pom.xml
@@ -31,6 +31,11 @@
             <!--<scope>test</scope>-->
         </dependency>
         <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.11.1</version>
+        </dependency>
+        <dependency>
             <groupId>eu.stamp-project</groupId>
             <artifactId>botsing-commons</artifactId>
             <version>${project.version}</version>
