Initialize coupled branches calculator module

--- a/pom.xml
+++ b/pom.xml
@@ -421,6 +421,7 @@
         <module>botsing-parsers</module>
         <module>cling</module>
         <module>class-coupling-analyzer</module>
+        <module>cbc</module>
     </modules>
 
 </project>
