Add first version of MOEA/D

--- a/botsing-reproduction/pom.xml
+++ b/botsing-reproduction/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.uma.jmetal</groupId>
+            <artifactId>jmetal-algorithm</artifactId>
+            <version>${jmetal.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
