--- a/botsing-reproduction/pom.xml
+++ b/botsing-reproduction/pom.xml
@@ -46,11 +46,11 @@
             <version>${gson.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.uma.jmetal</groupId>
-            <artifactId>jmetal-algorithm</artifactId>
-            <version>${jmetal.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.uma.jmetal</groupId>-->
+<!--            <artifactId>jmetal-algorithm</artifactId>-->
+<!--            <version>${jmetal.version}</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
