Update Botsing crash reproduction to compile with EvoSuite 1.2. - The tests are still failing (will be fixed in the next commits) - Cling, CBC calculator, and model generator modules are ignored for now.

--- a/botsing-reproduction/pom.xml
+++ b/botsing-reproduction/pom.xml
@@ -45,8 +45,13 @@
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>jsr250-api</artifactId>
+            <version>1.0</version>
+        </dependency>
 
-<!--        <dependency>-->
+        <!--        <dependency>-->
 <!--            <groupId>org.uma.jmetal</groupId>-->
 <!--            <artifactId>jmetal-algorithm</artifactId>-->
 <!--            <version>${jmetal.version}</version>-->
